fix(overflow styles): fixing overflow style issues
The notification.html file had height set on html and body, and then
set overflow: hidden on the body element to prevent scroll bars.
A later commit added in overflow: overlay to body that was also
masquerading some double scroll bars

--- a/ui/app/components/app/permission-page-container/index.scss
+++ b/ui/app/components/app/permission-page-container/index.scss
@@ -52,6 +52,7 @@
       display: flex;
       align-items: center;
       padding-top: 8px;
+      height: 144px;
     }
 
     a, a:hover {
